<resources>
    <string name="app_name" translatable="false">Any Kernel Gesture</string>
    <string name="ui_no_action">No action</string>
    <string name="ui_dblclick">Double tap screen</string>
    <string name="ui_swipe_up">Swipe to UP</string>
    <string name="ui_swipe_down">Swipe to DOWN</string>
    <string name="ui_swipe_left">Swipe to LEFT</string>
    <string name="ui_swipe_rught">Swipe to RIGHT</string>
    <string name="ui_draw_o">Draw O letter</string>
    <string name="ui_draw_e">Draw E letter</string>
    <string name="ui_draw_m">Draw M letter</string>
    <string name="ui_draw_l">Draw L letter</string>
    <string name="ui_draw_w">Draw W letter</string>
    <string name="ui_draw_s">Draw S letter</string>
    <string name="ui_draw_v">Draw V letter</string>
    <string name="ui_use_gesture">Use touchscreen gestures</string>
    <string name="ui_gesture_enable">Enable gesture</string>
    <string name="ui_gesture_enabled">Enabled gestures</string>
    <string name="ui_gesture_disabled">Disabled gestures</string>
    <string name="ui_default_action">Default action on all gestures</string>
    <string name="ui_vibrate">Vibrate on gesture</string>
    <string name="ui_notify">Play notify on gesture</string>
    <string name="ui_adv_settings">Additional settings</string>
    <string name="ui_volume_up">Volume UP key</string>
    <string name="ui_volume_down">Volume DOWN key</string>
    <string name="ui_vibrate_off">No vibration</string>
    <string name="ui_vibrate_on">Vibrate on gesture</string>
    <string name="ui_sound_default">System default</string>
    <string name="ui_no_notify">No notify on gesture</string>
    <string name="iu_choose_action">Action for gesture</string>
    <string name="ui_screen_on">Screen on</string>
    <string name="ui_icon">Icon</string>
    <string name="ui_proximity_off">Sensor not useed</string>
    <string name="ui_proximity_on">Use sensor</string>
    <string name="ui_proximity_use">Use proximity sensor</string>
    <string name="ui_root_title">ROOT access not exists</string>
    <string name="ui_root_help">To fully work this application need ROOT access</string>
    <string name="ui_alert_gs_title">Gesture not detected</string>
    <string name="ui_alert_gs_message_keys">Possibly your device not support gestures, only:</string>
    <string name="ui_alert_gs_message_wo_keys">Possibly your device not support gestures</string>
    <string name="ui_title_gestures">gestures</string>
    <string name="ui_title_keys">keys</string>
    <string name="ui_proximity_gesture">Proximity gesture</string>
    <string name="ui_title_gesture">proximity</string>
    <string name="ui_unlock_screen">Screen lock</string>
    <string name="ui_unlock_screen_off">Do not unlock after action</string>
    <string name="ui_unlock_screen_on">Auto unlock screen after action</string>
    <string name="ui_adv_menu">Interesting advertising</string>
    <string name="ui_service">Background service</string>
    <string name="ui_draw_z">Draw Z letter</string>
    <string name="ui_key_actions">Screen off actions</string>
    <string name="ui_sensor_actions">Sensor actions</string>
    <string name="ui_touchscreen_summ">Wakeup with touchscreen gestures</string>
    <string name="ui_key_summ">Wakeup with key action</string>
    <string name="ui_volume_down_delay">Double volume DOWN key</string>
    <string name="ui_volume_up_delay">Double volume UP key</string>
    <string name="ui_title_no_any_support">No any supported</string>
    <string name="ui_action_flashlight">Flashlight</string>
    <string name="ui_action_dialer">Dialer</string>
    <string name="ui_action_contacts">Contacts</string>
    <string name="ui_action_mail">Mail</string>
    <string name="ui_action_speech_time">Speech time</string>
    <string name="ui_action_ok_google">OK Google</string>
    <string name="ui_action_web_browser">Browser</string>
    <string name="ui_action_battery">Charged</string>
    <string name="ui_action_speech_battery">Speech battery level</string>
    <string name="ui_action_camera">Camera</string>
    <string name="ui_title_screen_on">Screen on</string>
    <string name="ui_title_screen_off">Screen off</string>
    <string name="ui_action_screen_off">Screen off</string>
    <string name="ui_menu_settings">Settings</string>
    <string name="ui_action_dbl_tap_on">Double tap on homescreen</string>
    <string name="ui_action_music_playpause">Play/Pause music</string>
    <string name="ui_action_music_prev">Previous track</string>
    <string name="ui_action_music_next">Next track</string>
    <string name="ui_adv_title">Adv loaging...</string>
    <string name="ui_adv_content">Please look at my adv page</string>
    <string name="ui_screen_unlock">Unlock screen</string>
    <string name="ui_detect2_help">1. Power off screen\n2. Make gesture after notify (each new gesture make vibrate)\n3. After gesture power on screen.\n\nBe sure what standard gestures is ON!</string>
    <string name="ui_detect2_title">Step 2</string>
    <string name="ui_detect_title">Step 1</string>
    <string name="ui_detect_help">Press start and wait for next step!</string>
    <string name="ui_detect_start">Start</string>
    <string name="ui_detect_send_log">Send</string>
    <string name="ui_detect_subtitle">Detect and sent to developer</string>
    <string name="ui_detect_dlg_title">Collecting data....</string>
    <string name="ui_detect_dlg_content">Wait until you find the data, it may take a long time!</string>
    <string name="ui_detect_send_title">Report sending....</string>
    <string name="ui_detect_send_no_title">No email app found</string>
    <string name="ui_detect_send_no_content">Please install any email app to send report!</string>
    <string name="ui_collect_send_content">Email app opening!\nThanks you for report!</string>
    <string name="ui_detect2_dlg_content">Tap on screen for close window!</string>
    <string name="ui_detect2_dlg_title">Events captured:</string>
    <string name="ui_detect2_subtitle">Detect gesture events</string>
    <string name="ui_menu_detect">Gestures detect</string>
    <string name="ui_btn_close">Close</string>
    <string name="ui_warning_gesture_title">Gesture warning</string>
    <string name="ui_warning_gesture_content">There is no way to know which gestures work on your device. Go to the Gesture Detection menu and test the device.</string>
    <string name="ui_warning_key_title">Device sleep warning</string>
    <string name="ui_warning_key_content">On some devices (MTK processors), the keys may not work in the processor sleep mode. This is a hardware problem and can not be solved by software.</string>
    <string name="ui_root_title_install">Please install SuperSU to give result</string>
    <string name="ui_snack_clipboard">Copied to clipboard</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
