<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="perf_WARNING_GESTURE"
        android:title="@string/ui_warning_gesture_title"
        android:summary="@string/ui_warning_gesture_content"
        />

    <PreferenceCategory
        android:title="@string/ui_title_screen_off"
        android:key="GESTURE_GROUP"
        >

        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_U"
            android:title="@string/ui_dblclick"
            />

        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_UP"
            android:title="@string/ui_swipe_up"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_DOWN"
            android:title="@string/ui_swipe_down"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_LEFT"
            android:title="@string/ui_swipe_left"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_RIGHT"
            android:title="@string/ui_swipe_rught"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_O"
            android:title="@string/ui_draw_o"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_E"
            android:title="@string/ui_draw_e"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_M"
            android:title="@string/ui_draw_m"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_L"
            android:title="@string/ui_draw_l"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_W"
            android:title="@string/ui_draw_w"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_S"
            android:title="@string/ui_draw_s"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_V"
            android:title="@string/ui_draw_v"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_Z"
            android:title="@string/ui_draw_z"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ui_title_screen_on"
        android:key="GESTURE_GROUP_ON"
        >
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_U_ON"
            android:title="@string/ui_action_dbl_tap_on"
            />
    </PreferenceCategory>
</PreferenceScreen>