<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/ui_title_screen_off"
        android:key="KEY_GROUP"
        >
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEUP"
            android:title="@string/ui_volume_up"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEUP_DELAY"
            android:title="@string/ui_volume_up_delay"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEDOWN"
            android:title="@string/ui_volume_down"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEDOWN_DELAY"
            android:title="@string/ui_volume_down_delay"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ui_title_screen_on"
        android:key="KEY_GROUP_ON"
        >
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEUP_DELAY_ON"
            android:title="@string/ui_volume_up_delay"
            />
        <ru.vpro.kernelgesture.tools.GestureSwitchPreference
            android:defaultValue="false"
            android:key="KEY_VOLUMEDOWN_DELAY_ON"
            android:title="@string/ui_volume_down_delay"
            />
    </PreferenceCategory>

</PreferenceScreen>
